Remove of unused imports of each file